<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>de.uni-stuttgart.tik.viplab</groupId>
	<artifactId>websocket-api</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>ViPLab WebSocket API</name>
	<modules>
		<module>websocket-api-impl</module>
		<module>amqp-connector</module>
		<module>internal-extension-api</module>
		<module>extensions</module>
	</modules>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
		<quarkus-plugin.version>3.17.5</quarkus-plugin.version>
		<quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
		<quarkus.platform.group-id>io.quarkus</quarkus.platform.group-id>
		<quarkus.platform.version>3.22.2</quarkus.platform.version>
		<surefire-plugin.version>3.5.0</surefire-plugin.version>
		<org.mockito.version>3.3.3</org.mockito.version>
    <quarkus.container-image.build>true</quarkus.container-image.build>
    <quarkus.container-image.group>viplab</quarkus.container-image.group>
    <quarkus.container-image.name>websocket-api</quarkus.container-image.name>
    <quarkus.container-image.tag>latest</quarkus.container-image.tag>
	</properties>
	<dependencies>
		<dependency>
			<groupId>io.quarkus</groupId>
			<artifactId>quarkus-junit5</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>hamcrest</artifactId>
			<version>3.0</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>${quarkus.platform.group-id}</groupId>
				<artifactId>${quarkus.platform.artifact-id}</artifactId>
				<version>${quarkus.platform.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson</groupId>
				<artifactId>jackson-bom</artifactId>
				<version>2.18.2</version>
				<scope>import</scope>
				<type>pom</type>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>org.jboss.jandex</groupId>
				<artifactId>jandex-maven-plugin</artifactId>
				<version>1.2.3</version>
				<executions>
					<execution>
						<?m2e ignore?>
						<id>make-index</id>
						<goals>
							<goal>jandex</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>${surefire-plugin.version}</version>
					<configuration>
						<excludes>
							<exclude>**/*IntegrationTest</exclude>
						</excludes>
						<systemPropertyVariables>
							<java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
						</systemPropertyVariables>
					</configuration>
				</plugin>
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.13.0</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
</project>
